--- a/index.html
+++ b/index.html
@@ -1,4 +1,33 @@
-<p class="heading">Copy from IBM Quantum Experience Circuit Composer statevector output state, and paste here. Open downloaded file in <b>drumbit Plus</b>.</p>
+<!DOCTYPE html>
+<!--
+  Copyright 2019 the original author or authors.
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+
+  TODO:
+    []
+-->
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
+    <!--meta property="twitter:image" content="https://javafxpert.github.io/grok-bloch/images/bloch-sphere.png"-->
+    <title>Quantum DJ</title>
+    <script src="js/thirdparty/math.min.js"></script>
+    <script src="js/main.js"></script>
+</head>
+<body>
+<p class="heading">Copy from IBM Quantum Experience Circuit Composer statevector output state, and paste here. Open
+    downloaded file in <b>drumbit Plus</b>.</p>
 <div class="col-xs-6">
     <h2>Paste statevector text here</h2>
     <p>
@@ -13,4 +42,6 @@
 
 <p id="logTarget" class="col-xs-12"></p>
 
-<footer><p><small>Demo based on <a href="https://googlechrome.github.io/samples/cut-and-copy/index.html" target="_blank">Google Chrome examples</a>.</small></p></footer>
+<footer><p><small>Demo based on <a href="https://googlechrome.github.io/samples/cut-and-copy/index.html"
+                                   target="_blank">Google Chrome examples</a>.</small></p></footer>
+</body>
